--- a/loginpage.html
+++ b/loginpage.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <script src="../form validation/script1.js"></script>
+    <script src="script1.js"></script>
 </body>
 
 </html>
