--- a/loginpage.html
+++ b/loginpage.html
@@ -36,7 +36,7 @@
             <a  href="#" class="login"><h4>login</h4></a>
         </div>
     </div>
-
+    <script src="jquery.min.js"></script>
     <script src="script1.js"></script>
 </body>
 
