--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="password" id="password" placeholder="    PASSWORD">
                 <div class="passmsg msg"></div>
             </div>
-            <a  href="#" class="login"><h4>login</h4></a>
+            <a  href="#" target = blank class="login"><h4>login</h4></a>
         </div>
     </div>
     <script src="jquery.min.js"></script>
